# Syntera

./: README.md  cloudflare-tunnel.yml  docker-compose.performance.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/workflows/: deploy-agent.yml  deploy-chat.yml  deploy-kb.yml  deploy-voice-agent.yml  deploy-widget.yml
database/: README.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  SECURITY.md  WORKFLOWS.md
docs/knowledge-base-examples/: small.txt
frontend/: README.md  components.json  instrumentation.ts  next.config.ts  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/hooks/: use-chat-socket-events.ts  use-debounce.ts  use-optimistic-mutation.ts
frontend/public/: faq.txt  policy.txt  product.txt.txt  shipping.txt  troubleshooting.txt
services/: README.md
services/agent/: README.md  esbuild.config.js  package.json  pnpm-lock.yaml  (+2 more)
services/voice-agent/: .railwayignore  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  run.py
services/voice-agent/src/: __init__.py  agent.py  agent_server.py  config.py  contact_extractor.py  knowledge_base.py  main.py  message_saver.py  supabase_client.py
services/voice-agent/src/utils/: __init__.py  logger.py  sentry.py
shared/: README.md  package.json  pnpm-lock.yaml
widget/: README.md  package.json  pnpm-lock.yaml  test.html  tsconfig.json  vite.config.ts
(+269 files in other folders)
